--- a/web/scss/components/_icons.scss
+++ b/web/scss/components/_icons.scss
@@ -1,4 +1,5 @@
 .navIcon {
+  z-index: 1;
   @include size(40px 40px);
   @include flexbox(flex, $justify: space-around, $align-items: center);
   @include position(absolute, 40px null null 45px);
